--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Age Calculator</string>
+    <string name="age_calculator">Age Calculator</string>
+    <string name="dob">Enter Your DOB</string>
+    <string name="your_date_of_birth">Your Date of birth</string>
 </resources>
